--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ script:
   # tag containers
   - docker tag udagram-api-feed lamnt18061999/udagram-api-feed:v4a
   - docker tag udagram-api-user lamnt18061999/udagram-api-user:v4a
-  - docker tag udagram-frontend lamnt18061999/udagram-frontend:local
+  - docker tag udagram-frontend lamnt18061999/udagram-frontend:v4a
   - docker tag udagram-reverseproxy lamnt18061999/udagram-reverseproxy:v4a
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
@@ -31,10 +31,10 @@ after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker push lamnt18061999/udagram-api-user:v4a
   - docker push lamnt18061999/udagram-api-feed:v4a
-  - docker push lamnt18061999/udagram-frontend:local
+  - docker push lamnt18061999/udagram-frontend:v4a
   - docker push lamnt18061999/udagram-reverseproxy:v4a
   
   - docker pull lamnt18061999/udagram-api-user:v4a
   - docker pull lamnt18061999/udagram-api-feed:v4a
-  - docker pull lamnt18061999/udagram-frontend:local
+  - docker pull lamnt18061999/udagram-frontend:v4a
   - docker pull lamnt18061999/udagram-reverseproxy:v4a
