--- a/configurations/env-configmap.yaml
+++ b/configurations/env-configmap.yaml
@@ -10,7 +10,7 @@ data:
   JWT_SECRET: dGVzdGluZw==
   POSTGRES_DB: postgres
   POSTGRES_HOST: lamnt63-project3.caemgoi2loib.us-east-1.rds.amazonaws.com
-  URL: http://aa4347130e1bf44e8aa465949e2a4307-1697724047.us-east-1.elb.amazonaws.com:8100
+  URL: http://localhost:8100
   NODE_OPTIONS: --max-old-space-size=1024
 metadata:
   name: env-config
